# ai-text-to-sql

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/scripts/: check_diff.py
.github/workflows/: _lint.yml  _test_release.yml  ci.yml  python-publish.yml  release.yml
ai_text_to_sql/: __about__.py  __init__.py  agent.py  config_parser.py  exceptions.py  text_to_sql.py  text_to_sql_agent.py  text_to_sql_chat.py
ai_text_to_sql/connectors/: __init__.py  connector.py  connector_factory.py  database_connector.py  database_connector_factory.py  mariadb_connector.py  mssql_connector.py  mysql_connector.py  postgresql_connector.py  sqlite_connector.py
ai_text_to_sql/data_connectors/: __init__.py  data_connector.py  data_connector_factory.py  database_connector_factory.py  mariadb_connector.py  mssql_connector.py  mysql_connector.py  postgresql_connector.py  sqlite_connector.py
ai_text_to_sql/database_connectors/: __init__.py  connector_factory.py  database_connector.py  database_connector_factory.py  mariadb_connector.py  mssql_connector.py  mysql_connector.py  postgresql_connector.py  sqlite_connector.py
ai_text_to_sql/llm_connectors/: __init__.py  bard_connector.py  bard_llm.py  llm_connector.py  llm_connector_factory.py  llm_factory.py  openai_connector.py  openai_llm.py
ai_text_to_sql/llms/: __init__.py  bard_llm.py  gpt_llm.py  llm.py  llm_factory.py  openai_llm.py
excluded_tests/: test_mssql_connector.py  test_mysql_connector.py  test_postgresql_connector.py
gpt_text_to_sql/: __about__.py  config_parser.py  gpt.py  text_to_sql.py
gpt_text_to_sql/config/: logging.yaml
gpt_text_to_sql/connectors/: __init__.py  database_connector.py  database_connector_factory.py  mariadb_connector.py  mssql_connector.py  mysql_connector.py  postgresql_connector.py  sqlite_connector.py
gpt_text_to_sql/llms/: gpt_llm.py  llm.py  llm_factory.py
tests/: test_mssql_connector.py  test_mysql_connector.py  test_postgresql_connector.py  test_sqlite_connector.py
tests/excluded_tests/: test_mssql_connector.py  test_mysql_connector.py  test_postgresql_connector.py
tests/integration_tests/: test_sqlite_connector.py
tests/integration_tests/excluded_tests/: test_mssql_connector.py  test_mysql_connector.py  test_postgresql_connector.py
